--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         }
         
         .gradient-stats {
-            background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
+            background: linear-gradient(135deg, #90dc96 0%, #38f9d7 100%);
         }
         
         .gradient-cta {
